--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,22 @@
+:root {
+  --red-icon: #ae2012;
+  --orange-icon: #ca6702;
+  --beige-icon: #e9d8a6;
+  --green-icon: #94d2bd;
+  --blue-icon: #005f73;
+  --grey-icon: grey;
+  --keyboard-background: lightgrey;
+  --game-max-width: 500px;
+}
+
 .App {
-  display: grid;
-  grid-template-rows: 50px 1fr 384px 1fr 100px;
+  width: 100%;
+  max-width: var(--game-max-width);
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
