--- a/src/components/board/BoardSection.css
+++ b/src/components/board/BoardSection.css
@@ -1,15 +1,13 @@
 .board {
-  /* width: 323px;
-  height: 384px; */
   display: grid;
   grid-template-rows: repeat(5, 60px);
-  grid-gap: 8px;
+  grid-row-gap: 8px;
 }
 
 .board-container {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-grow: 1;
     overflow: hidden;
+    padding: 10px;
 }
