--- a/src/components/board/game-row/game-tile/GameTile.css
+++ b/src/components/board/game-row/game-tile/GameTile.css
@@ -1,15 +1,31 @@
 .tile {
   border: 2px solid grey ;
-  width: 100%;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
-  line-height: 2rem;
-  font-weight: bold;
-  vertical-align: middle;
-  box-sizing: border-box;
-  color: #1a1a1b;
-  text-transform: uppercase;
   user-select: none;
+}
+
+.icon {
+  font-size: 2.5rem;
+}
+
+.red {
+  color: var(--red-icon);
+}
+
+.orange {
+  color: var(--orange-icon);
+}
+
+.beige {
+  color: var(--beige-icon);
+}
+
+.green {
+  color: var(--green-icon);
+}
+
+.blue {
+  color: var(--blue-icon);
 }
