--- a/src/components/header/HeaderSection.css
+++ b/src/components/header/HeaderSection.css
@@ -4,15 +4,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    border-bottom: 1px solid grey;
 }
 
-.break {
-  flex-basis: 100%;
-  height: 0;
+.header-icon {
+  font-size: 1rem;
+  margin: 0px 10px;
 }
 
-.divider {
-  width: 300px;
-  border-bottom: 1px solid grey;
-  height: 1px;
+.title {
+  font-weight: 750;
+  font-size: 1.8rem;
 }
