Add animation for wrong answer and bounce for correct Refactor into a game service (because of React & state is very messy but externalises SOME of the logic)

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-/* TODO Figure out how to do a "night-mode" cause that seems fun */
+/* TODO Figure out how to do a "night-mode" / "color-blind" mode cause that seems fun  But really having global themes*/
+/* TODO figure out right colors */
 
 :root {
   --red-icon: #ae2012;
