--- a/src/components/keyboard/Keyboard.css
+++ b/src/components/keyboard/Keyboard.css
@@ -8,23 +8,18 @@
   margin-right: 6px;
   background-color: var(--keyboard-background);
   padding: 5px;
-  height: 40px;
-  width: 40px;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
+  aspect-ratio: var(--ratio-portrait);
+  block-size: var(--letter-size);
+  border-radius: var(--radius-2);
+  font-size: var(--font-size-3);
+  font-family: var(--font-sans);
+  font-weight: var(--font-weight-7);
   justify-content: center;
-  font-size: 1.5rem;
 }
 
 .control-key {
-  width: 50px;
-  font-size: 1.2rem;
-}
-.key-icon {
-  position: relative;
-}
-
-.grey {
-  color: var(--grey-icon);
+  width: var(--font-size-7);
+  letter-spacing: var(--font-letterspacing-0);
+  font-size: var(--font-size-0);
+  color: var(--gray-6);
 }
