--- a/src/components/board/BoardSection.css
+++ b/src/components/board/BoardSection.css
@@ -1,13 +1,7 @@
 .board {
   display: grid;
-  grid-template-rows: repeat(6, 50px);
-  grid-row-gap: 8px;
-}
+  grid-template-rows: repeat(6, var(--tile-size));
+  grid-row-gap: 5px;
+  padding: 15px;
 
-.board-container {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
-    overflow: hidden;
-    padding: 15px;
 }
