--- a/src/components/board/game-row/GameRow.css
+++ b/src/components/board/game-row/GameRow.css
@@ -1,7 +1,7 @@
 .game-row {
   display: grid;
-  grid-template-columns: repeat(3, 50px);
-  grid-column-gap: 8px;
+  grid-template-columns: repeat(3, var(--tile-size));
+  grid-column-gap: 5px;
 }
 
 .game-row[data-animation='shake'] {
