Dynamic answer size, good algorithm for checking answer, remove some old icons code and colors. Keyboard now also corresponds to guesses.

--- a/src/components/board/game-row/GameRow.css
+++ b/src/components/board/game-row/GameRow.css
@@ -1,7 +1,7 @@
 .game-row {
   display: grid;
-  grid-template-columns: repeat(3, var(--tile-size));
   grid-column-gap: 5px;
+  /* justify-item: center; */
 }
 
 .game-row[data-animation='shake'] {
