--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,16 @@
 @import "open-props/style";
 
 :root {
-  --color-1-icon: var(--gray-2);
-  --color-2-icon: var(--gray-8);
-  --color-3-icon: var(--yellow-1);
-  --color-4-icon: var(--teal-6);
-  --color-5-icon: var(--indigo-4);
-  --grey-icon: grey;
   --keyboard-background: lightgrey;
   --game-max-width: 500px;
-  --color-present: var(--yellow-6);
-  --color-correct: var(--green-3);
+  --color-present: var(--orange-4);
+  --color-correct: var(--green-6);
   --color-absent: var(--gray-6);
-  --background: var(--gradient-7);
   --tile-size: 4rem;
   --letter-size: 2.5rem;
 }
 
+/* TODO working but pick sizes */
 .nightmode {
   /* --color-present: var(--yellow-1);
   --color-correct: var(--green-6);
@@ -41,4 +35,11 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* TODO also fix screen size */
+/* TODO  */
+@media screen and (max-height: 480px)  {
+  :root {
+  }
 }
