--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,12 @@
   --keyboard-background: lightgrey;
   --game-max-width: 500px;
   --color-present: var(--orange-4);
-  --color-correct: var(--green-6);
+  --color-correct: var(--green-7);
   --color-absent: var(--gray-6);
   --tile-size: 4rem;
   --letter-size: 2.5rem;
 }
 
-/* TODO working but pick sizes */
 .nightmode {
   /* --color-present: var(--yellow-1);
   --color-correct: var(--green-6);
@@ -38,7 +37,7 @@ code {
 }
 
 /* TODO also fix screen size */
-/* TODO  */
+/* TODO media and resizing the content */
 @media screen and (max-height: 480px)  {
   :root {
   }
