Add classnames, favorite little utility, to help with classnames. Make the enter button big and green when it can be pressed

--- a/src/components/keyboard/Keyboard.css
+++ b/src/components/keyboard/Keyboard.css
@@ -24,6 +24,12 @@
   color: var(--gray-6);
 }
 
+.ready-for-click {
+  color: var(--color-correct);
+  font-weight: var(--font-weight-9);
+  font-size: var(--font-size-enter-button);
+}
+
 .key[data-state='absent'] {
   background-color: var(--color-absent);
   color: var(--gray-0);
