--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --letter-size: 2.5rem;
   --color-title: brown;
   --font-size-tile: 2.5rem;
+  --font-size-enter-button: var(--font-size-2)
 }
 
 .nightmode {
@@ -40,20 +41,22 @@ code {
 
 /* TODO modals should scroll down more on mobile (e.g. instruction mobile) */
 /* TODO spacing between elements to look better instead of static */
-@media screen and (max-width: 460px)  {
+@media screen and (max-width: 475px)  {
   :root {
     --letter-size: 2rem;
     --tile-size: 3.5rem;
-    --game-max-width: 460px;
+    --game-max-width: 475px;
+    --font-size-enter-button: 0.88rem;
   }
 }
 
-@media screen and (max-width: 400px)  {
+@media screen and (max-width: 405px)  {
   :root {
     --letter-size: 1.7rem;
     --game-max-width: 400px;
     --tile-size: 2.8rem;
     --font-size-tile: 2rem;
+    --font-size-enter-button: 0.80rem;
   }
 }
 
@@ -61,6 +64,7 @@ code {
   :root {
     --letter-size: 1.5rem;
     --game-max-width: 370px;
+    --font-size-enter-button: 0.75rem;
   }
 }
 
