Add settings menu, constrast mode. Import toggle. Add basic email for feedback fetching

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@
   --font-size-enter-button: var(--font-size-2)
 }
 
+.constrast-mode {
+  --color-correct: var(--blue-9);
+  --color-present: var(--orange-6);
+}
+
 .nightmode {
   /* --color-present: var(--yellow-1);
   --color-correct: var(--green-6);
