--- a/src/components/board/BoardSection.css
+++ b/src/components/board/BoardSection.css
@@ -1,7 +1,14 @@
 .board {
   display: grid;
-  grid-template-rows: repeat(6, var(--tile-size));
   grid-row-gap: 5px;
   padding: 15px;
+}
 
+.gameRowLabel {
+  font-size: var(--font-size-1);
+  font-weight: var(--font-weight-5);
+}
+
+.board-with-label {
+  grid-template-columns: 50px 1fr;
 }
