Add locking function for weekly puzzle

--- a/src/components/board/game-row/game-tile/GameTile.css
+++ b/src/components/board/game-row/game-tile/GameTile.css
@@ -11,6 +11,10 @@
 
 }
 
+.lock {
+  background-color: var(--color-locked);
+}
+
 .tile[data-state='absent'] {
   background-color: var(--color-absent);
   border: 0;
