--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   display: flex;
+  width: var(--game-max-width);
+  margin: 0 auto;
   flex-direction: column;
   align-items: center;
   font-family: var(--font-sans);
