--- a/src/components/modal/ModalContainer.css
+++ b/src/components/modal/ModalContainer.css
@@ -10,3 +10,19 @@
   padding-bottom: 10px;
   margin: 0;
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transform: translateY(400px);
+    transition: all 400ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+    transform: translateY(400px);
+}
