Update start date, reset animation to make future animations easier. Fix bug where weekly puzzle showed last weeks answer. For now hid, may change in future

--- a/src/components/header/HeaderSection.css
+++ b/src/components/header/HeaderSection.css
@@ -9,11 +9,11 @@
   margin: 0px 10px;
 }
 
-.title {
+.header-title {
   font-weight: 750;
   font-size: 1.8rem;
 }
 
-.title-color-span { 
+.title-color-span {
   color: var(--color-title);
 }
