--- a/src/components/modal/bible-content/BibleContent.css
+++ b/src/components/modal/bible-content/BibleContent.css
@@ -38,3 +38,28 @@
   font-style: italic;
   margin: 0 auto;
 }
+
+.flex-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-row > button {
+  font-size: var(--font-size-fluid-00);
+  font-weight: var(--font-weight-4);
+
+  color: var(--blue-9);
+  border: var(--border-size-2) solid var(--blue-5);
+  background-color: transparent;
+  border-radius: var(--radius-2);
+}
+.flex-row > button:hover {
+  cursor: pointer;
+  color: var(--blue-0);
+  background-color: var(--blue-3);
+  text-shadow: 0 1px 0 var(--blue-8);
+}
+
+.justify-center {
+  justify-content: center;
+}
